--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "apollo-server-hapi": "^2.2.6",
     "graphql": "^14.0.2",
+    "graphql-compose": "^5.3.4",
+    "graphql-compose-mongoose": "^5.2.1",
     "hapi": "^17.8.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.15",
